--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,9 @@
     // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        
+        
         {
             "name": "Python: текущий файл",
             "type": "python",
@@ -14,3 +17,11 @@
         }
     ]
 }
+
+        {
+            "name": "Python: Debug Console",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "internalConsole"
+        }
