--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
-    "python.analysis.typeCheckingMode": "basic"
-}
-
-{
+    "python.analysis.typeCheckingMode": "basic",
     "name": "Python: Debug Console",
     "type": "python",
     "request": "launch",
     "program": "${file}",
     "console": "internalConsole"
 }
+
